@@ -1,4 +1,4 @@
-# -*- coding: utf-8 -*-
+﻿# -*- coding: utf-8 -*-
 #  ATContentTypes http://sf.net/projects/collective/
 #  Archetypes reimplementation of the CMF core types
 #  Copyright (c) 2003-2005 AT Content Types development team
@@ -111,134 +111,6 @@ WORKFLOW_CRITERIA = ''
 ICONMAP = {'application/pdf' : 'pdf_icon.gif',
            'image'           : 'image_icon.gif'}
 
-GOOD_CHARS = string.ascii_letters + string.digits + '._-'
-CHAR_MAPPING = {
-    ' ' : '_',
-
-# Latin-1 below here
-    'Å' : 'Aa',
-    'À' : 'A',
-    'Á' : 'A',
-    'Â' : 'A',
-    'Ã' : 'A',
-    'Ä' : 'Ae',
-    'Å' : 'A',
-    'Æ' : 'Ae',
-    'Ç' : 'C',
-    'È' : 'E',
-    'É' : 'E',
-    'Ê' : 'E',
-    'Ë' : 'E',
-    'Ì' : 'I',
-    'Í' : 'I',
-    'Î' : 'I',
-    'Ï' : 'I',
-    'Ð' : 'D',
-    'Ñ' : 'N',
-    'Ò' : 'O',
-    'Ó' : 'O',
-    'Ô' : 'O',
-    'Õ' : 'O',
-    'Ö' : 'Oe',
-    'Ø' : 'Oe',
-    'Ù' : 'U',
-    'Ú' : 'U',
-    'Û' : 'U',
-    'Ü' : 'Ue',
-    'Ý' : 'Y',
-    'ß' : 'ss',
-    'à' : 'a',
-    'á' : 'a',
-    'â' : 'a',
-    'ã' : 'a',
-    'ä' : 'ae',
-    'å' : 'aa',
-    'æ' : 'ae',
-    'ç' : 'c',
-    'è' : 'e',
-    'é' : 'e',
-    'ê' : 'e',
-    'ë' : 'e',
-    'ì' : 'i',
-    'í' : 'i',
-    'î' : 'i',
-    'ï' : 'i',
-    'ð' : 'd',
-    'ñ' : 'n',
-    'ò' : 'o',
-    'ó' : 'o',
-    'ô' : 'o',
-    'õ' : 'o',
-    'ö' : 'oe',
-    'ø' : 'oe',
-    'ù' : 'u',
-    'ú' : 'u',
-    'û' : 'u',
-    'ü' : 'ue',
-    'ý' : 'y',
-    'ÿ' : 'y',
-
-# Greek below here
-    'ΐ' : 'i',
-    'Α' : 'A',
-    'Β' : 'B',
-    'Γ' : 'G',
-    'Δ' : 'D',
-    'Ε' : 'E',
-    'Ζ' : 'Z',
-    'Η' : 'I',
-    'Θ' : 'TH',
-    'Ι' : 'I',
-    'Κ' : 'K',
-    'Λ' : 'L',
-    'Μ' : 'M',
-    'Ν' : 'N',
-    'Ξ' : 'KS',
-    'Ο' : 'O',
-    'Π' : 'P',
-    'Ρ' : 'R',
-    'Σ' : 'S',
-    'Τ' : 'T',
-    'Υ' : 'Y',
-    'Φ' : 'F',
-    'Ψ' : 'PS',
-    'Ω' : 'O',
-    'Ϊ' : 'I',
-    'Ϋ' : 'Y',
-    'ά' : 'a',
-    'έ' : 'e',
-    'ί' : 'i',
-    'ΰ' : 'y',
-    'α' : 'a',
-    'β' : 'b',
-    'γ' : 'g',
-    'δ' : 'd',
-    'ε' : 'e',
-    'ζ' : 'z',
-    'η' : 'i',
-    'θ' : 'th',
-    'ι' : 'i',
-    'κ' : 'k',
-    'λ' : 'l',
-    'μ' : 'm',
-    'ν' : 'n',
-    'ξ' : 'ks',
-    'ο' : 'o',
-    'π' : 'p',
-    'ρ' : 'r',
-    'ς' : 's',
-    'σ' : 's',
-    'τ' : 't',
-    'υ' : 'y',
-    'φ' : 'f',
-    'ψ' : 'ps',
-    'ω' : 'o',
-    'ϊ' : 'i',
-    'ϋ' : 'y',
-    'ό' : 'o',
-    'ύ' : 'y'
-    }
-CHAR_MAPPING = dict([(k.decode('utf-8'), v) for k, v in CHAR_MAPPING.items()])
 
 MIME_ALIAS = {
     'plain' : 'text/plain',
