@@ -73,8 +73,6 @@ from Products.Archetypes.public import log_exc
 
 from Products.CMFPlone.interfaces.Translatable import ITranslatable
 
-from Products.ATContentTypes.config import CHAR_MAPPING
-from Products.ATContentTypes.config import GOOD_CHARS
 from Products.ATContentTypes.config import MIME_ALIAS
 from Products.ATContentTypes.lib.constraintypes import ConstrainTypesMixin
 from Products.ATContentTypes.interfaces import IATContentType
@@ -133,19 +131,6 @@ def updateAliases(klass, aliases):
 
     return aliases
 
-
-def cleanupFilename(filename, encoding='utf-8'):
-    """Removes bad chars from file names to make them a good id
-    """
-    if not filename:
-        return
-    result = u''
-    for s in str(filename).decode(encoding):
-        s = CHAR_MAPPING.get(s, s)
-        for c in s:
-            if c in GOOD_CHARS:
-                result += c
-    return result.encode(encoding)
 
 def translateMimetypeAlias(alias):
     """Maps old CMF content types to real mime types
@@ -446,7 +431,7 @@ class ATCTFileContent(ATCTContent):
         field.set(self, value, **kwargs) # set is ok
         if self._isIDAutoGenerated(self.getId()):
             filename = field.getFilename(self, fromBaseUnit=False)
-            clean_filename = cleanupFilename(filename, self.getCharset())
+            clean_filename = getToolByName(self, 'plone_utils').normalizeString(filename)
             request_id = self.REQUEST.form.get('id')
             if request_id and not self._isIDAutoGenerated(request_id):
                 # request contains an id
@@ -473,7 +458,7 @@ class ATCTFileContent(ATCTContent):
         f_name = field.getName()
         upload = REQUEST.form.get('%s_file' % f_name, None)
         filename = getattr(upload, 'filename', None)
-        clean_filename = cleanupFilename(filename, self.getCharset())
+        clean_filename = getToolByName(self, 'plone_utils').normalizeString(filename)
         used_id = (id and not self._isIDAutoGenerated(id)) and id or clean_filename
 
         if upload:
